Inject logo image for header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
 
     <body>
-        
+        <div class="first">
+            <div class="header">
+                <img src="./images/ai-generated-8249559.svg" alt="Logo of a lake" height="" width="">
+            </div>
+        </div>
     </body>
 </html>
