Complete header in chunk1

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     </head>
 
     <body>
-        <div class="first">
+        <div class="chunk1">
             <div class="header">
                 <img src="./images/ai-generated-8249559.svg" alt="Logo of a lake" height="" width="">
+
+                <ul>
+                    <li>Blog</li>
+                    <li>Projects</li>
+                    <li>Stories</li>
+                </ul>
             </div>
+
+            <!-- <div class="chunk1content">
+                <div class="inleft">
+                    <div class="hero">Welcome to my website!</div>
+                    <p>Welcome visitor! My name is Laurence and this website connects to my blogs, games and my works. It is a pleaasure to have you here!</p>
+                    <button class="chunk1button">Sign up</button>
+                </div>
+
+            </div> -->
         </div>
     </body>
 </html>
