Add content to first chunk

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
                 </ul>
             </div>
 
-            <!-- <div class="chunk1content">
+            <div class="chunk1content">
                 <div class="inleft">
                     <div class="hero">Welcome to my website!</div>
-                    <p>Welcome visitor! My name is Laurence and this website connects to my blogs, games and my works. It is a pleaasure to have you here!</p>
+                    <p>Welcome visitor! My name is Laurence and this website connects to my blogs, games and my works. It is a pleaasure to have you here! Sign up here for my newsletter for the latest news on my video games and dev logs.</p>
                     <button class="chunk1button">Sign up</button>
                 </div>
 
-            </div> -->
+                <img src="./images/mountain-7559738_1920.jpg" alt="An image of mountain and trees" height="" width="">
+            </div>
         </div>
     </body>
 </html>
