--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="chunk1">
             <div class="header">
-                <img src="./images/ai-generated-8249559.svg" alt="Logo of a lake" height="" width="">
+                <img class="logo" src="./images/ai-generated-8249559.svg" alt="Logo of a lake" height="" width="">
 
                 <ul>
                     <li>Blog</li>
