--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="chunk1">
             <div class="header">
-                <img class="logo" src="./images/ai-generated-8249559.svg" alt="Logo of a lake" height="" width="">
+                <img class="logo image" src="./images/mountainlogo.svg" alt="Logo of a lake" height="" width="">
 
                 <ul>
                     <li>Blog</li>
@@ -25,7 +25,7 @@
                     <button class="chunk1button">Sign up</button>
                 </div>
 
-                <img src="./images/mountain-7559738_1920.jpg" alt="An image of mountain and trees" height="" width="">
+                <img  class="main image" src="./images/mountain-7559738_1920.jpg" alt="An image of mountain and trees" height="" width="">
             </div>
         </div>
     </body>
