Change logo format

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="chunk1">
             <div class="header">
-                <img class="logo image" src="./images/mountainlogo.svg" alt="Logo of a lake" height="" width="">
+                <img class="logo image" src="./images/mountainslogo.png" alt="Logo of a lake" height="" width="">
 
                 <ul>
                     <li>Blog</li>
