--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="chunk1content">
                 <div class="inleft">
                     <div class="hero">Welcome to my website!</div>
-                    <p>Welcome, visitor! My name is Laurence and this website connects to my blogs, games and my works. It is a pleaasure to have you here! Sign up here for my newsletter for the latest news on my video games and dev logs.</p>
+                    <p class="welcome message">Welcome, visitor! My name is Laurence and this website connects to my blogs, games and my works. It is a pleaasure to have you here! Sign up here for my newsletter for the latest news on my video games and dev logs.</p>
                     <button class="chunk1button">Sign up</button>
                 </div>
 
