Amalgamate links in header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <img class="logo image" src="./images/mountainslogo.png" alt="Logo of a lake" height="" width="">
 
                 <ul>
-                    <li>Blog</li>
-                    <li>Projects</li>
-                    <li>Stories</li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Stories</a></li>
                 </ul>
             </div>
 
