Make links secure

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <img class="logo image" src="./images/mountainslogo.png" alt="Logo of a lake" height="" width="">
 
                 <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Stories</a></li>
+                    <li><a href="#" targe="_blank" rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="#" rel="noopener noreferrer">Projects</a></li>
+                    <li><a href="#" rel="noopener noreferrer">Stories</a></li>
                 </ul>
             </div>
 
@@ -28,5 +28,14 @@
                 <img  class="main image" src="./images/mountain-7559738_1920.jpg" alt="An image of mountain and trees" height="" width="">
             </div>
         </div>
+
+
+        <!-- <div class="chunk2">
+            <h3 class="birds">Birds are cool(in my opinion)</h3>
+
+            <div class="info">
+                <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width=""
+            </div>
+        </div> -->
     </body>
 </html>
