Initiate chunk2 scaffolding

--- a/index.html
+++ b/index.html
@@ -30,12 +30,28 @@
         </div>
 
 
-        <!-- <div class="chunk2">
-            <h3 class="birds">Birds are cool(in my opinion)</h3>
+        <div class="chunk2">
+            <h3 class="title ofbirds">Birds are cool(in my opinion)</h3>
 
-            <div class="info">
-                <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width=""
+            <div class="birds">
+                <div class="info">
+                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                </div>
+                <div class="info">
+                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                </div>
+                <div class="info">
+                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                </div>
+                <div class="info">
+                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                </div>
             </div>
-        </div> -->
+
+        </div>
     </body>
 </html>
