Mkae burds smaller

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             <div class="birds">
                 <div class="info">
                     <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
-                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce.</p>
                 </div>
                 <div class="info">
-                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
-                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                    <img class="bird image" src="./images/bird2.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce.</p>
                 </div>
                 <div class="info">
-                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
-                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                    <img class="bird image" src="./images/bird3.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce.</p>
                 </div>
                 <div class="info">
-                    <img class="bird image" src="./images/bird1.jpg" alt="A cute birdie" height="" width="">
-                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce. Thank you.</p>
+                    <img class="bird image" src="./images/bird4.jpg" alt="A cute birdie" height="" width="">
+                    <p>This is a cute bird, in my opinion. Enjoy this picture. Check the github markdown file for the sauce.</p>
                 </div>
             </div>
 
