--- a/index.html
+++ b/index.html
@@ -53,5 +53,13 @@
             </div>
 
         </div>
+
+        <div class="chunk3">
+
+            <div class="quote">
+                Grit is living life like it's a marathon, not a sprint.
+            </div>
+            <div class="quoter">Angela Lee Duckworth via Tedtalk</div>
+        </div>
     </body>
 </html>
