--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="quote">
                 Grit is living life like it's a marathon, not a sprint.
             </div>
-            <div class="quoter">Angela Lee Duckworth via Tedtalk</div>
-            
+            <div class="quoter">-Angela Lee Duckworth via Tedtalk</div>
+
         </div>
     </body>
 </html>
