Initiate 4th chunk scaffolding

--- a/index.html
+++ b/index.html
@@ -62,5 +62,22 @@
             <div class="quoter">-Angela Lee Duckworth via Tedtalk</div>
 
         </div>
+
+        <div class="chunk4">
+
+            <div class="bluebox">
+                <div class="leftside">
+                    <div class="calltoaction">
+                        Sign up here my newsletter and sneek peaks!
+                    </div>
+
+                    <p class="persuasion">
+                        By pressing that big button right there, you can gain access to my news letter and sneek peaks for free!
+                    </p>
+                </div>
+
+                <button class="chunk4button">Sign up</button>
+            </div>
+        </div>
     </body>
 </html>
