--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="bluebox">
                 <div class="leftside">
                     <div class="calltoaction">
-                        Sign up here my newsletter and sneek peaks!
+                        Sign up here! It's time!
                     </div>
 
                     <p class="persuasion">
