--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
                 <button class="chunk4button">Sign up</button>
             </div>
         </div>
+
+        <div class="footer">
+            
+        </div>
     </body>
 </html>
