Add footer content

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="footer">
-            
+            Copyright © MineLandingPage 2025
         </div>
     </body>
 </html>
