--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="./styles/style.css">
-        <link href="script.js">
     </head>
 
     <body>
@@ -84,5 +83,7 @@
         <div class="footer">
             Copyright © MineLandingPage 2025
         </div>
+
+        <script src="./scripts/script.js"></script>
     </body>
 </html>
